[gd_scene load_steps=3 format=3 uid="uid://c650tofwr83sy"]

[ext_resource type="Script" uid="uid://dv40u6pefapd8" path="res://src/scripts/xplosion.gd" id="1_ltfsh"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_edx6t"]
size = Vector2(45, 4)

[node name="Xplosion" type="Node2D"]
script = ExtResource("1_ltfsh")

[node name="Xplosion" type="Area2D" parent="."]

[node name="ColorRect2" type="ColorRect" parent="Xplosion"]
offset_left = -45.0
offset_top = -2.0
offset_right = 45.0
offset_bottom = 2.0
color = Color(1, 0, 1, 1)

[node name="hitbox" type="CollisionShape2D" parent="Xplosion"]
position = Vector2(22.5, 0)
shape = SubResource("RectangleShape2D_edx6t")
debug_color = Color(3.65794e-06, 0.505879, 0.59151, 0.42)

[node name="ColorRect" type="ColorRect" parent="Xplosion/hitbox"]
offset_left = -67.5
offset_top = -2.0
offset_right = 22.5
offset_bottom = 2.0

[connection signal="area_entered" from="Xplosion" to="." method="_on_area_entered"]
[connection signal="body_entered" from="Xplosion" to="." method="_on_body_entered"]
